--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
         content="width=device-width,
           user-scalable=no,
           initial-scale=1.0,
           maximum-scale=1.0,
           minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="imac_container" data-qa="card" >
+      <img src="images/imac.jpeg" alt="iMac" class="imac_image">
+      <p class="imac_about">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</p>
+      <p class="imac_code">Код товара: 195434</p>
+      <div class="rating">
+        <div class="stars_box">
+        <img src="images/star-active.svg" alt="star" class="star">
+        <img src="images/star-active.svg" alt="star" class="star">
+        <img src="images/star-active.svg" alt="star" class="star">
+        <img src="images/star-active.svg" alt="star" class="star">
+        <img src="images/star.svg" alt="star" class="star">
+        </div>
+        <p class="review">Отзывов: 5</p>
+      </div>
+      <div class="price_box">
+        <span class="price">Цена:</span>
+        <span class="amount">69 999 грн</span>
+      </div>
+      <a href="#" class="button" data-qa="hover">Купить</a>
+    </div>
 
-<script type="text/javascript" src="./main.js"></script>
-</body>
+  <script type="text/javascript" src="./main.js"></script>
+  </body>
 </html>
